--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,10 @@ services:
     volumes:
       - ./strapi:/src
     environment:
-      HOST: 192.168.99.100
+      HOST: "${HOST}"
       DATABASE_CLIENT: mongo
-      DATABASE_HOST: 192.168.99.100
-      DATABASE_PORT: 27017
+      DATABASE_HOST: "${DATABASE_HOST}"
+      DATABASE_PORT: "${DATABASE_PORT}"
       DATABASE_NAME: strapi
       DATABASE_USERNAME: strapi
       DATABASE_PASSWORD: strapi
